# helix

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  reading
.claude/: settings.local.json
.cursor/plans/: ACP-42954976.plan.md
.github/workflows/: build.yml
book/src/: configuration.md
helix-acp/: Cargo.toml
helix-acp-types/: Cargo.toml
helix-acp-types/src/: capabilities.rs  content.rs  jsonrpc.rs  lib.rs  notification.rs  protocol.rs  request.rs  session.rs  tool.rs  types.rs
helix-acp/src/: client.rs  jsonrpc.rs  lib.rs  registry.rs  transport.rs
helix-core/src/: doc_formatter.rs  fold.rs  syntax.rs  text_annotations.rs
helix-core/src/syntax/: config.rs
helix-event/: Cargo.toml
helix-loader/: build.rs
helix-lsp/: Cargo.toml
helix-stdx/: Cargo.toml
helix-term/: Cargo.toml
helix-term/src/: application.rs  commands.rs  config.rs  main.rs
helix-term/src/commands/: acp.rs  typed.rs
helix-term/src/keymap/: default.rs
helix-term/src/ui/: acp.rs  editor.rs  mod.rs  statusline.rs
helix-term/tests/: integration.rs
helix-term/tests/test/: helpers.rs  scroll.rs
helix-vcs/: Cargo.toml
helix-view/: Cargo.toml
helix-view/src/: document.rs  editor.rs  fold.rs  gutter.rs  handlers.rs  lib.rs  view.rs
helix-view/src/handlers/: acp.rs
runtime/queries/rust/: folds.scm
