[package]
name = "helix-acp-types"
version.workspace = true
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

description = "Types for the Agent Client Protocol (ACP)"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
