[package]
name = "helix-acp"
description = "ACP client implementation for Helix project"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
helix-stdx = { path = "../helix-stdx" }
helix-core = { path = "../helix-core" }
helix-loader = { path = "../helix-loader" }
helix-acp-types = { path = "../helix-acp-types" }

anyhow = "1.0"
async-trait = "0.1"
futures-executor.workspace = true
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "io-std", "time", "process", "macros", "fs", "parking_lot", "sync"] }
thiserror.workspace = true
slotmap.workspace = true
parking_lot.workspace = true
arc-swap = "1"
futures-util.workspace = true
tokio-stream.workspace = true
sonic-rs.workspace = true
