[package]
name = "helix-acp"
description = "ACP (Agent Client Protocol) client implementation for Helix"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
helix-stdx = { path = "../helix-stdx" }
helix-acp-types = { path = "../helix-acp-types" }

anyhow = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "io-std", "time", "process", "macros", "sync"] }
tokio-stream.workspace = true
futures-util.workspace = true
parking_lot.workspace = true
slotmap.workspace = true
thiserror.workspace = true
