[package]
name = "helix-acp"
version.workspace = true
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

description = "Agent Client Protocol (ACP) client for Helix"

[dependencies]
helix-acp-types = { path = "../helix-acp-types" }
helix-core = { path = "../helix-core" }
helix-stdx = { path = "../helix-stdx" }
futures-util.workspace = true
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slotmap.workspace = true
thiserror.workspace = true
tokio = { version = "1.50", features = ["rt", "rt-multi-thread", "io-util", "io-std", "process", "macros", "sync"] }
tokio-stream.workspace = true
